--- a/pgblackboard/index.html
+++ b/pgblackboard/index.html
@@ -25,7 +25,7 @@
 
           <a data-bind-click="$root.openTreeNode.bind($root)"
              data-bind-attr.title="comment">
-            <i class="treenode-icon" data-bind-css="'treenode-icon--'+type"></i>
+            <i class="treenode-icon" data-bind-css="'treenode-icon_'+type"></i>
             <span data-bind-text="name"></span>
             <small data-bind-text="comment"></small>
           </a>
