--- a/pgblackboard/index.html
+++ b/pgblackboard/index.html
@@ -15,10 +15,13 @@
 
         <button data-bind-click="toggle"
                 data-bind-visible="hasChildren"
-                data-bind-css.treenode-toggler-collapsed="!isExpanded()"
-                data-bind-css.treenode-toggler-expanded="isExpanded"
-                data-bind-css.spinner="childrenAreLoading"
-                class="treenode-toggler"></button>
+                class="treenode-toggler">
+
+          <i class="fontello treenode-toggler-icon"
+             data-bind-css.fontello-triangle-right="isCollapsed"
+             data-bind-css.fontello-triangle-down="isExpanded"
+             data-bind-css.spinner="childrenAreLoading"></i>
+        </button>
 
         <header class="itemheader"
                 data-bind-css.itemheader-active="isOpened">
@@ -70,51 +73,60 @@
   </div>
 
 
-  <div class="stretch splitpanel-h bg-body">
+  <div class="root-splitpanel splitpanel bg-body">
 
-    <div class="leftpanel splitfix scrollbox bg-panel">
+    <div class="leftpanel splitpanel-left scrollbox bg-panel">
+      <div class="leftpanel-inner">
         <!-- ko template: { name: 'queries-tmpl', data: queries } --><!-- /ko -->
         <!-- ko template: { name: 'tree-tmpl', data: tree } --><!-- /ko -->
+      </div>
     </div>
 
-    <div class="splitter"></div>
+    <div class="splitter-v"></div>
 
-    <div class="splitstretch splitpanel-v">
-      <form id="queryform"
-            method="POST"
-            target="result"
-            class="splitstretch bg-panel"
-            enctype="application/x-www-form-urlencoded">
+    <div class="splitpanel-right splitpanel">
+      <div class="splitpanel-top bg-panel">
+        <form id="queryform"
+              method="POST"
+              target="result"
+              class="stretch"
+              enctype="application/x-www-form-urlencoded">
 
-        <textarea id="query" name="query"
-          >\connect postgres&#13;&#10;select 'hello, ' || current_user; -- Alt+X to execute</textarea>
+          <textarea id="query" name="query" class="stretch"
+            >\connect postgres&#13;&#10;select 'hello, ' || current_user; -- Alt+X to execute</textarea>
 
-        <input type="hidden" name="selection" />
+          <input type="hidden" name="selection" />
 
-        <div id="execbar" class="bg-body">
-          <button class="btn-action"
-                  type="submit"
-                  title="alt-m"
-                  accesskey="m"
-                  formaction="map">
-            map
-          </button>
+          <div id="execbar" class="bg-body">
+            <button class="btn-action"
+                    type="submit"
+                    title="alt-m"
+                    accesskey="m"
+                    name="view"
+                    value="map">
+              map
+            </button>
 
-          <button class="execute-action btn-action"
-                  type="submit"
-                  title="alt-x"
-                  accesskey="x">
-            execute
-          </button>
-        </div>
+            <button class="execute-action btn-action"
+                    type="submit"
+                    title="alt-x"
+                    accesskey="x"
+                    name="view"
+                    value="table">
+              execute
+            </button>
+          </div>
 
-        <div class="spinner-shield" data-bind="visible: queryTextIsLoading()">
-          <div class="spinner"></div>
-        </div>
+          <div class="spinner-shield" data-bind="visible: queryTextIsLoading()">
+            <div class="spinner"></div>
+          </div>
 
-      </form>
-      <div class="splitter"></div>
-      <iframe id="result" name="result" class="scrollbox splitfix bg-panel"></iframe>
+        </form>
+      </div>
+      <div class="splitter-h"></div>
+      <div class="splitpanel-bottom bg-panel">
+        <iframe id="result" name="result" class="stretch"></iframe>
+      </div>
     </div>
 
 
