--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
               class="stretch"
               enctype="application/x-www-form-urlencoded">
 
-          <textarea id="query" name="query" class="stretch"
+          <textarea id="sql_script" name="sql_script" class="stretch"
             >\connect postgres&#13;&#10;select 'hello, ' || current_user; -- Alt+X to execute</textarea>
 
           <input type="hidden" name="selection" />
