--- a/src/static/err/err3.html
+++ b/src/static/err/err3.html
@@ -6,9 +6,13 @@
 </head>
 <link rel="stylesheet" href="err.css" />
 <body>
-    <h1>500 Internal Server Error</h1>
+    <h1>
+    	<span data-replace="code">418</span>
+    	<span data-replace="reason">I'm a teapot</span>
+    </h1>
     <p>
-        PostgreSQL server is gone.
+    	<span data-replace="message">Could not connect to PostgreSQL server.</span>
     </p>
+    <p>See log for details.</p>
 </body>
 </html>
