--- a/src/tree/tree_design.html
+++ b/src/tree/tree_design.html
@@ -7,7 +7,7 @@
   <script src="../static/lib/knockout-att/1.0.0/knockout-att.js"></script>
   <link href="../static/app.css" rel="stylesheet" />
 </head>
-<body>
+<body class="light">
 
   <!-- ko template: { name: 'tree-tmpl' } --><!-- /ko -->
 
@@ -22,20 +22,54 @@
     ko.bindingProvider.instance = new ko.flatBindingProvider();
     ko.applyBindings({ nodes: [
       database('postgres', [
-        schema('foo'),
-        schema('bar'),
+        schema('information_schema', [
+
+        ]),
+        schema('pg_catalog', [
+        ]),
+        schema('public'),
       ]),
 
-      { name: 'one', typ: 'database', has_children: true, children: [
-        { name: 'foo', typ: 'table', has_children: true, children: [
-        ]},
-      ]},
+      database('database', [
 
-      { name: 'three', typ: 'database', has_children: true, children: [
-        { name: 'foo', typ: 'table', has_children: true, children: [
+      ]),
 
-        ]},
-      ]},
+      schema('schema', [
+      ]),
+
+      extension('extension', [
+        table('table', [
+          pkcolumn('id : int'),
+          column('message : text'),
+          fkcolumn('foreign_id: int'),
+        ]),
+
+        func('function'),
+        agg('aggregate'),
+      ]),
+
+      table('table', [
+        pkcolumn('id : int'),
+        column('message : text'),
+        fkcolumn('foreign_id: int'),
+      ]),
+
+      view('view'),
+      matview('materialized view'),
+      foreigntable('foreign table'),
+
+      pkcolumn('primary key column'),
+      fkcolumn('foreign key column'),
+      column('regular column : type'),
+
+      index('index'),
+      trigger('trigger'),
+      foreignkey('foreignkey'),
+      check('check constraint'),
+      unique('unique constraint'),
+
+      func('function'),
+      agg('aggregate'),
 
     ].map(createTreeNode) });
 
@@ -48,7 +82,7 @@
               window,
               options.parent.children || []
             ),
-            1000
+            500
           );
         }
       );
@@ -72,11 +106,138 @@
       };
     }
 
+    function extension(name, children) {
+      return {
+        name: name,
+        typ: 'extension',
+        has_children: true,
+        children: children
+      };
+    }
+
     function table(name, children) {
       return {
         name: name,
         typ: 'table',
         has_children: true,
+        children: children
+      };
+    }
+
+    function view(name, children) {
+      return {
+        name: name,
+        typ: 'view',
+        has_children: true,
+        children: children
+      };
+    }
+
+    function matview(name, children) {
+      return {
+        name: name,
+        typ: 'matview',
+        has_children: true,
+        children: children
+      };
+    }
+
+    function foreigntable(name, children) {
+      return {
+        name: name,
+        typ: 'foreigntable',
+        has_children: true,
+        children: children
+      };
+    }
+
+    function pkcolumn(name, children) {
+      return {
+        name: name,
+        typ: 'pkcolumn',
+        has_children: false,
+        children: children
+      };
+    }
+
+    function fkcolumn(name, children) {
+      return {
+        name: name,
+        typ: 'fkcolumn',
+        has_children: false,
+        children: children
+      };
+    }
+
+    function column(name, children) {
+      return {
+        name: name,
+        typ: 'column',
+        has_children: false,
+        children: children
+      };
+    }
+
+    function index(name, children) {
+      return {
+        name: name,
+        typ: 'index',
+        has_children: false,
+        children: children
+      };
+    }
+
+    function trigger(name, children) {
+      return {
+        name: name,
+        typ: 'trigger',
+        has_children: false,
+        children: children
+      };
+    }
+
+    function foreignkey(name, children) {
+      return {
+        name: name,
+        typ: 'foreignkey',
+        has_children: false,
+        children: children
+      };
+    }
+
+    function check(name, children) {
+      return {
+        name: name,
+        typ: 'check',
+        has_children: false,
+        children: children
+      };
+    }
+
+    function unique(name, children) {
+      return {
+        name: name,
+        typ: 'unique',
+        has_children: false,
+        children: children
+      };
+    }
+
+
+    function func(name, children) {
+      return {
+        name: name,
+        typ: 'func',
+        has_children: false,
+        children: children
+      };
+    }
+
+    function agg(name, children) {
+      return {
+        name: name,
+        typ: 'agg',
+        has_children: false,
         children: children
       };
     }
