--- a/src/tree/tree.html
+++ b/src/tree/tree.html
@@ -10,7 +10,7 @@
         <i class="fontello treenode-toggler-icon"
            data-bind-css.fontello-triangle-right="isCollapsed"
            data-bind-css.fontello-triangle-down="isExpanded"
-           data-bind-css.spinner="childrenAreLoading"></i>
+           data-bind-css.spinner="isExpanding"></i>
 
       </button>
 
