--- a/src/tree/tree.html
+++ b/src/tree/tree.html
@@ -1,30 +1,30 @@
 <template id="tree-tmpl">
-  <ul data-bind-foreach="nodes">
+  <ul data-bind="foreach: nodes">
     <li class="treenode"
-        data-bind-css.treenode-groupstart="isGroupStart">
+        data-bind="css: { 'treenode-groupstart': isGroupStart }">
 
       <button class="treenode-toggler"
-              data-bind-click="toggle"
-              data-bind-visible="hasChildren">
+              data-bind="click: toggle,
+                         visible: hasChildren">
 
         <i class="fontello treenode-toggler-icon"
-           data-bind-css.fontello-triangle-right="isCollapsed"
-           data-bind-css.fontello-triangle-down="isExpanded"
-           data-bind-css.spinner="isExpanding"></i>
+           data-bind="css: { 'fontello-triangle-right': isCollapsed,
+                             'fontello-triangle-down': isExpanded,
+                             'spinner': isExpanding }"></i>
 
       </button>
 
       <div class="itemheader"
-           data-bind-css.itemheader-active="isOpened">
+           data-bind="css: { 'itemheader-active': isOpened }">
 
-        <a data-bind-click="open"
-           data-bind-attr.title="comment">
+        <a data-bind="click: open,
+                      attr: { title: comment }">
 
           <i class="treenode-icon"
-             data-bind-css="'treenode-icon_'+type"></i>
+             data-bind="css: 'treenode-icon_'+type"></i>
 
-          <span data-bind-text="name"></span>
-          <small data-bind-text="comment"></small>
+          <span data-bind="text: name"></span>
+          <small data-bind="text: comment"></small>
         </a>
 
       </div>
