--- a/src/static/table/table_design.html
+++ b/src/static/table/table_design.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title></title>
-  <link href="../table.css" rel="stylesheet" />
+  <link href="table.css" rel="stylesheet" />
 </head>
 <body class="light">
 <div class="main scrollbox">
