wip refactor file struct

--- a/src/index.html
+++ b/src/index.html
@@ -69,8 +69,8 @@
 
   <div class="leftbar bg-body">
     <button class="leftbar-btn fontello fontello-lamp"
-            data-bind-click="toggleTheme">
-    </button>
+            data-bind-click="toggleTheme"
+            ></button>
   </div>
 
 
@@ -104,18 +104,16 @@
                     title="alt-m"
                     accesskey="m"
                     name="view"
-                    value="map">
-              map
-            </button>
+                    value="map"
+                    >map</button>
 
             <button class="execute-action btn-action"
                     type="submit"
                     title="alt-x"
                     accesskey="x"
                     name="view"
-                    value="table">
-              execute
-            </button>
+                    value="table"
+                    >execute</button>
           </div>
 
           <div class="spinner-shield" data-bind-visible="queryTextIsLoading()">
