--- a/src/static/editor/editor_design.html
+++ b/src/static/editor/editor_design.html
@@ -3,17 +3,18 @@
 <head>
   <title></title>
   <link href="editor.css" rel="stylesheet" />
-  <link href="../lib/codemirror/4.6.0/codemirror.css" rel="stylesheet" />
+  <link href="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.12.0/codemirror.css" rel="stylesheet" />
 
-  <script src="../lib/knockout/3.2.0/knockout.js"></script>
+  <script src="http://knockoutjs.com/downloads/knockout-3.2.0.debug.js"></script>
 
-  <script src="../lib/codemirror/4.6.0/codemirror.js"></script>
-  <script src="../lib/codemirror/4.6.0/addon/search/searchcursor.js"></script>
-  <script src="../lib/codemirror/4.6.0/keymap/sublime.js"></script>
-  <script src="../lib/codemirror/4.6.0/addon/edit/matchbrackets.js"></script>
-  <script src="../lib/codemirror/4.6.0/addon/edit/closebrackets.js"></script>
-  <script src="../lib/codemirror/4.6.0/mode/sql/sql.js"></script>
-  <script src="../codemirror-pgsql.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.12.0/codemirror.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.12.0/addon/search/searchcursor.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.12.0/keymap/sublime.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.12.0/addon/edit/matchbrackets.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.12.0/addon/edit/closebrackets.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.12.0/mode/sql/sql.js"></script>
+
+  <script src="codemirror-pgsql.js"></script>
 
   <script src="editor.js"></script>
   <script>
@@ -43,21 +44,20 @@
 </head>
 <body>
 
-
-  <form data-bind="submit: onSubmit,
-                   template: { name: 'editor-tmpl',
-                               data: editor }"></form>
-
+  <form data-bind="submit: onSubmit, template: editorTmpl"></form>
   <script>
     ko.applyBindings({
-      editor: new Editor('\\connect postgres\n\n' +
-                         'select \'awesome\';\n\n' +
-                         'select \'long line to make horizontal scroll visibleblebleblebleble\';\n\n' +
-                         '-- more lines\n--\n--\n--\n--\n--\n--\n'),
+      editorTmpl: {
+        name: 'editor-tmpl',
+        data: new Editor('\\connect postgres\n\n' +
+                           'select \'awesome\';\n\n' +
+                           'select \'long line to make horizontal scroll visibleblebleblebleble\';\n\n' +
+                           '-- more lines\n--\n--\n--\n--\n--\n--\n'),
+      },
 
       onSubmit: function (form) {
         console.dir(form);
-      },
+      }
     });
   </script>
 
