--- a/src/static/map/map_design.html
+++ b/src/static/map/map_design.html
@@ -3,8 +3,8 @@
 <head>
     <title></title>
     <link href="map.css" rel="stylesheet" />
-    <link href="../lib/leaflet/0.7.3/leaflet.css" rel="stylesheet" />
-    <script src="../lib/leaflet/0.7.3/leaflet.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet-src.js"></script>
 
     <style>
     .main {
