--- a/src/static/myqueries/myqueries-design.html
+++ b/src/static/myqueries/myqueries-design.html
@@ -9,7 +9,7 @@
 
   <script>
     var req = new XMLHttpRequest();
-    req.open('GET', 'myqueries.html', false);
+    req.open('GET', 'myqueries.template.html', false);
     req.send();
     document.write(req.responseText);
   </script>
