--- a/src/static/tree/tree.template.html
+++ b/src/static/tree/tree.template.html
@@ -1,5 +1,5 @@
 <template id="tree-tmpl">
-  <ul data-bind="foreach: nodes">
+  <ul class="tree" data-bind="foreach: nodes">
     <li class="treenode"
         data-bind="css: { 'treenode-groupstart': isGroupStart }">
 
