--- a/src/index_.html
+++ b/src/index_.html
@@ -19,23 +19,25 @@
       right: 0;
       left: 0;
       background: #333;
-    }
+      }
 
     .loader-inner {
       position: fixed;
       top: 50%;
       left: 50%;
-      width: 70px;
+      width: 4em;
       height: 18px;
       text-align: center;
-      margin: -9px -35px;
-    }
+      margin: -.5em -2em;
+      font-size: 25px;
+      }
 
     .loader-bounce1,
     .loader-bounce2,
     .loader-bounce3 {
-      width: 18px;
-      height: 18px;
+      width: 1em;
+      height: 1em;
+      margin: .1em;
       background-color: #ccc;
 
       border-radius: 100%;
@@ -45,17 +47,17 @@
       /* Prevent first frame from flickering when animation starts */
       -webkit-animation-fill-mode: both;
       animation-fill-mode: both;
-    }
+      }
 
     .loader-bounce1 {
       -webkit-animation-delay: -0.32s;
       animation-delay: -0.32s;
-    }
+      }
 
     .loader-bounce2 {
       -webkit-animation-delay: -0.16s;
       animation-delay: -0.16s;
-    }
+      }
 
     @-webkit-keyframes bouncedelay {
       0%, 80%, 100% { -webkit-transform: scale(0.0) }
@@ -78,9 +80,9 @@
   <div class="main" data-bind="template: $data">
     <div class="loader-outer">
       <div class="loader-inner">
-        <div class="loader-bounce1"></div>
-        <div class="loader-bounce2"></div>
-        <div class="loader-bounce3"></div>
+        <div class="loader-bounce1">
+        </div><div class="loader-bounce2">
+        </div><div class="loader-bounce3"></div>
       </div>
     </div>
   </div>
