--- a/src/index.html
+++ b/src/index.html
@@ -143,6 +143,6 @@
   <script src="static/lib/codemirror/4.6.0/addon/edit/closebrackets.js"></script>
 
   <script src="static/app.js"></script>
-  <script>pgbb.main(/*INITIAL_DATA_PLACEHOLDER*/);</script>
+  <script>main(/*INITIAL_DATA_PLACEHOLDER*/);</script>
 </body>
 </html>
