--- a/src/static/splitpanel/splitpanel-design.html
+++ b/src/static/splitpanel/splitpanel-design.html
@@ -1,120 +1,115 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-	<script src="splitpanel.js"></script>
-	<link href="splitpanel.css" rel="stylesheet" />
+  <title></title>
+  <script src="http://knockoutjs.com/downloads/knockout-3.2.0.debug.js"></script>
+  <script src="splitpanel.js"></script>
+  <link href="splitpanel.css" rel="stylesheet" />
 
-	<style>
-	.box {
-		width: 700px;
-		height: 400px;
-		margin: 3em auto;
-	}
+  <style>
+  .box {
+    width: 700px;
+    height: 400px;
+    margin: 3em auto;
+  }
 
-	.splitpanel-left,
-	/*.splitpanel-right,*/
-	.splitpanel-top,
-	.splitpanel-bottom {
-		background-color: #ccc;
-		overflow: hidden;
-		font-family: 'ubuntu';
-		font-size: small;
-	}
+  .splitpanel-left,
+  /*.splitpanel-right,*/
+  .splitpanel-top,
+  .splitpanel-bottom {
+    background-color: #ccc;
+    overflow: hidden;
+    font-family: 'ubuntu';
+    font-size: small;
+  }
 
-	.splitpanel-left::before,
-	.splitpanel-top::before {
-		content: attr(data-width);
-		display: block;
-		width: -webkit-fit-content;
-		width: fit-content;
-		margin: .5em auto;
+  .splitpanel-left::before,
+  .splitpanel-top::before {
+    content: attr(data-width);
+    display: block;
+    width: -webkit-fit-content;
+    width: fit-content;
+    margin: .5em auto;
 
-		background: #333;
-		border-radius: 2px;
-		padding: .1em .5em;
-		color: #ccc;
-	}
+    background: #333;
+    border-radius: 2px;
+    padding: .1em .5em;
+    color: #ccc;
+  }
 
-	.splitpanel-top,
-	.splitpanel-bottom {
-		/*padding-right: 4em;*/
-		box-sizing: border-box;
-	}
+  .splitpanel-top,
+  .splitpanel-bottom {
+    /*padding-right: 4em;*/
+    box-sizing: border-box;
+  }
 
-	.splitpanel-top::after {
-		content: attr(data-height);
-		position: absolute;
-		right: .5em;
-		top: 50%;
+  .splitpanel-top::after {
+    content: attr(data-height);
+    position: absolute;
+    right: .5em;
+    top: 50%;
 
-		background: #333;
-		border-radius: 2px;
-		padding: .1em .5em;
-		color: #ccc;
-	}
+    background: #333;
+    border-radius: 2px;
+    padding: .1em .5em;
+    color: #ccc;
+  }
 
-	iframe {
-		width: 100%;
-		height: 100%;
-		border: none;
-		margin: 0;
-		padding: 0;
-	}
+  iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+    margin: 0;
+    padding: 0;
+  }
 
-	</style>
+  </style>
 </head>
 <body>
 
-	<div class="box splitpanel">
-		<div class="splitpanel-left" data-width="---" onresize="event.target.dataset.width = event.target.clientWidth">
-			PostgreSQL is a powerful, open source object-relational database system.
-			It has more than 15 years of active development and a proven architecture
-			that has earned it a strong reputation for reliability, data integrity, and
-			correctness. It runs on all major operating systems, including Linux, UNIX
-			(AIX, BSD, HP-UX, SGI IRIX, Mac OS X, Solaris, Tru64), and Windows. It is
-			fully ACID compliant, has full support for foreign keys, joins, views, triggers,
-			and stored procedures (in multiple languages). It includes most SQL:2008 data types,
-			including INTEGER, NUMERIC, BOOLEAN, CHAR, VARCHAR, DATE, INTERVAL, and TIMESTAMP.
-			It also supports storage of binary large objects, including pictures, sounds, or video.
-			It has native programming interfaces for C/C++, Java, .Net, Perl, Python, Ruby, Tcl,
-			ODBC, among others, and exceptional documentation.
-		</div>
-		<div class="splitter-v"></div>
-		<div class="splitpanel-right splitpanel">
-			<div class="splitpanel-top" data-width="---" data-height="---"
-				 onresize="event.target.dataset.width = event.target.clientWidth;
-				 		   event.target.dataset.height = event.target.clientHeight">
+  <div class="box splitpanel">
+    <div class="splitpanel-left" data-width="---" onresize="event.target.dataset.width = event.target.clientWidth">
+      PostgreSQL is a powerful, open source object-relational database system.
+      It has more than 15 years of active development and a proven architecture
+      that has earned it a strong reputation for reliability, data integrity, and
+      correctness. It runs on all major operating systems, including Linux, UNIX
+      (AIX, BSD, HP-UX, SGI IRIX, Mac OS X, Solaris, Tru64), and Windows. It is
+      fully ACID compliant, has full support for foreign keys, joins, views, triggers,
+      and stored procedures (in multiple languages). It includes most SQL:2008 data types,
+      including INTEGER, NUMERIC, BOOLEAN, CHAR, VARCHAR, DATE, INTERVAL, and TIMESTAMP.
+      It also supports storage of binary large objects, including pictures, sounds, or video.
+      It has native programming interfaces for C/C++, Java, .Net, Perl, Python, Ruby, Tcl,
+      ODBC, among others, and exceptional documentation.
+    </div>
+    <div class="splitter-v" data-bind="splitter: 'vertical'"></div>
+    <div class="splitpanel-right splitpanel">
+      <div class="splitpanel-top" data-width="---" data-height="---"
+         onresize="event.target.dataset.width = event.target.clientWidth;
+                   event.target.dataset.height = event.target.clientHeight">
 
-				PostgreSQL is a powerful, open source object-relational database system.
-				It has more than 15 years of active development and a proven architecture
-				that has earned it a strong reputation for reliability, data integrity, and
-				correctness. It runs on all major operating systems, including Linux, UNIX
-				(AIX, BSD, HP-UX, SGI IRIX, Mac OS X, Solaris, Tru64), and Windows. It is
-				fully ACID compliant, has full support for foreign keys, joins, views, triggers,
-				and stored procedures (in multiple languages). It includes most SQL:2008 data types,
-				including INTEGER, NUMERIC, BOOLEAN, CHAR, VARCHAR, DATE, INTERVAL, and TIMESTAMP.
-				It also supports storage of binary large objects, including pictures, sounds, or video.
-				It has native programming interfaces for C/C++, Java, .Net, Perl, Python, Ruby, Tcl,
-				ODBC, among others, and exceptional documentation.
-			</div>
-			<div class="splitter-h"></div>
-			<div class="splitpanel-bottom">
+        PostgreSQL is a powerful, open source object-relational database system.
+        It has more than 15 years of active development and a proven architecture
+        that has earned it a strong reputation for reliability, data integrity, and
+        correctness. It runs on all major operating systems, including Linux, UNIX
+        (AIX, BSD, HP-UX, SGI IRIX, Mac OS X, Solaris, Tru64), and Windows. It is
+        fully ACID compliant, has full support for foreign keys, joins, views, triggers,
+        and stored procedures (in multiple languages). It includes most SQL:2008 data types,
+        including INTEGER, NUMERIC, BOOLEAN, CHAR, VARCHAR, DATE, INTERVAL, and TIMESTAMP.
+        It also supports storage of binary large objects, including pictures, sounds, or video.
+        It has native programming interfaces for C/C++, Java, .Net, Perl, Python, Ruby, Tcl,
+        ODBC, among others, and exceptional documentation.
+      </div>
+      <div class="splitter-h" data-bind="splitter: 'horizontal'"></div>
+      <div class="splitpanel-bottom">
 
-				<!-- iframe must not eat mousemove event when splitting -->
-				<iframe src="http://www.yr.no/place/Russia/Moscow/Moscow/avansert_meteogram.png"></iframe>
+        <!-- iframe must not eat mousemove event when splitting -->
+        <iframe src="http://www.yr.no/place/Russia/Moscow/Moscow/avansert_meteogram.png"></iframe>
 
-			</div>
-		</div>
-	</div>
+      </div>
+    </div>
+  </div>
 
-	<script>
-
-
-
-		initSplitter(document.querySelector('.splitter-h'));
-		initSplitter(document.querySelector('.splitter-v'));
-	</script>
+  <script>ko.applyBindings();</script>
 
 </body>
 </html>
